_build/html/reports/BigData-es007sparkMLlib.err.log
Traceback (most recent call last):
  File "/home/usuario/gitRepos/jupyterlab/venv/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/home/usuario/gitRepos/jupyterlab/venv/lib/python3.10/site-packages/nbclient/client.py", line 1263, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/usuario/gitRepos/jupyterlab/venv/lib/python3.10/site-packages/nbclient/util.py", line 85, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/usuario/gitRepos/jupyterlab/venv/lib/python3.10/site-packages/nbclient/util.py", line 60, in just_run
    return loop.run_until_complete(coro)
  File "/usr/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/home/usuario/gitRepos/jupyterlab/venv/lib/python3.10/site-packages/nbclient/client.py", line 701, in async_execute
    await self.async_execute_cell(
  File "/home/usuario/gitRepos/jupyterlab/venv/lib/python3.10/site-packages/nbclient/client.py", line 1019, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/usuario/gitRepos/jupyterlab/venv/lib/python3.10/site-packages/nbclient/client.py", line 913, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
apt update
------------------

[0;36m  Cell [0;32mIn [1], line 1[0;36m[0m
[0;31m    apt update[0m
[0m        ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (3287235396.py, line 1)

